; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_patch.c_PiceSendIoctl.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_patch.c_PiceSendIoctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@STATUS_SUCCESS = common dso_local global i64 0, align 8
@NotificationEvent = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"PiceSendIoctl: STATUS_INSUFFICIENT_RESOURCES\0A\00", align 1
@STATUS_INSUFFICIENT_RESOURCES = common dso_local global i64 0, align 8
@STATUS_PENDING = common dso_local global i64 0, align 8
@Executive = common dso_local global i32 0, align 4
@KernelMode = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"PiceSendIoctl: status: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @PiceSendIoctl(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_3__, align 8
  %13 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %14 = load i64, i64* @STATUS_SUCCESS, align 8
  store i64 %14, i64* %11, align 8
  %15 = load i32, i32* @NotificationEvent, align 4
  %16 = load i32, i32* @FALSE, align 4
  %17 = call i32 @KeInitializeEvent(i32* %10, i32 %15, i32 %16)
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* @TRUE, align 4
  %23 = call i32* @IoBuildDeviceIoControlRequest(i32 %18, i32 %19, i32 %20, i32 %21, i32 0, i32 0, i32 %22, i32* %10, %struct.TYPE_3__* %12)
  store i32* %23, i32** %13, align 8
  %24 = icmp eq i32* null, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %4
  %26 = call i32 @DPRINT(i32 ptrtoint ([46 x i8]* @.str to i32))
  %27 = load i64, i64* @STATUS_INSUFFICIENT_RESOURCES, align 8
  store i64 %27, i64* %5, align 8
  br label %52

28:                                               ; preds = %4
  %29 = load i32, i32* %6, align 4
  %30 = load i32*, i32** %13, align 8
  %31 = call i64 @IoCallDriver(i32 %29, i32* %30)
  store i64 %31, i64* %11, align 8
  %32 = load i64, i64* @STATUS_PENDING, align 8
  %33 = load i64, i64* %11, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %47

35:                                               ; preds = %28
  %36 = load i32, i32* @Executive, align 4
  %37 = load i32, i32* @KernelMode, align 4
  %38 = load i32, i32* @FALSE, align 4
  %39 = call i64 @KeWaitForSingleObject(i32* %10, i32 %36, i32 %37, i32 %38, i32* null)
  store i64 %39, i64* %11, align 8
  %40 = load i64, i64* @STATUS_SUCCESS, align 8
  %41 = load i64, i64* %11, align 8
  %42 = icmp eq i64 %40, %41
  %43 = zext i1 %42 to i32
  %44 = call i32 @ASSERT(i32 %43)
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  store i64 %46, i64* %11, align 8
  br label %47

47:                                               ; preds = %35, %28
  %48 = load i64, i64* %11, align 8
  %49 = call i32 @NT_SUCCESS(i64 %48)
  %50 = call i32 @DPRINT(i32 %49)
  %51 = load i64, i64* %11, align 8
  store i64 %51, i64* %5, align 8
  br label %52

52:                                               ; preds = %47, %25
  %53 = load i64, i64* %5, align 8
  ret i64 %53
}

declare dso_local i32 @KeInitializeEvent(i32*, i32, i32) #1

declare dso_local i32* @IoBuildDeviceIoControlRequest(i32, i32, i32, i32, i32, i32, i32, i32*, %struct.TYPE_3__*) #1

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i64 @IoCallDriver(i32, i32*) #1

declare dso_local i64 @KeWaitForSingleObject(i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @NT_SUCCESS(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
